2014-02-12  Kaz Kylheku  <kaz@kylheku.com>

	Undoing bogus optimization, which can only work when objects
	are treated as immutable.

	* hash.c (last_equal_key, last_equal_hash): Variables removed.
	(equal_hash, hash_process_weak): All references to removed
	variables scrubbed.

2014-02-12  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (some_satisfy, all_satisfy, none_satisfy): Fix coding
	mistake from two commits ago leading to a regression.

2014-02-11  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Register new functions posqual, posql,
	posq, pos, and pos_if as intrinsics.

	* lib.c (posqual, posql, posq, pos, pos_if): New functions.

	* lib.h (posqual, posql, posq, pos, pos_if): Declared.

	* txr.1: Documented

2014-02-11  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Turn a require argument into an optional
	one for the functions some, all and none.

	* lib.c (some_satisfy, all_satisfy, none_satisfy): Add defaulting
	behavior for pred parameter.

	* txr.1: Document that the predicate function is optional
	in calls to some, all and none.

2014-02-11  Kaz Kylheku  <kaz@kylheku.com>

	Version 79

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* RELNOTES: Updated.

2014-02-11  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (if_fun): Bugfix: forgotten handling of optional
	alternative argument.

2014-02-11  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (subst_vars): Bugfix: results of expressions not
	treated in the same way as variables: lists not stringified,
	causing expansions with parentheses, and sometimes errors
	due to unhandled objects. Also, use tostringp instead of
	format for stringifying objects.
	stringifying object. Bugfix.k

	* match.c (subst_vars): Added comment similar to the one in
	the subst_vars of eval.c. Removed superfluous conversion code where the
	str variable is already known to be a string.

2014-02-11  Kaz Kylheku  <kaz@kylheku.com>
